--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
   "keywords": [],
   "license": "AGPL-3.0",
   "peerDependencies": {
-    "playkit-js": "git+https://github.com/kaltura/playkit-js.git#v0.3.0",
-    "playkit-js-providers": "git+https://github.com/kaltura/playkit-js-providers.git#v1.0.0"
+    "playkit-js": "https://github.com/kaltura/playkit-js.git#v0.5.0",
+    "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#v1.2.0"
   },
   "repository": {
     "type": "git",
