--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   "license": "AGPL-3.0",
   "peerDependencies": {
     "playkit-js": "https://github.com/kaltura/playkit-js.git#v0.5.0",
-    "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#v1..0"
+    "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#v1.3.0"
   },
   "repository": {
     "type": "git",
