--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "mocha": "^3.2.0",
     "mocha-cli": "^1.0.1",
     "playkit-js": "https://github.com/kaltura/playkit-js.git#v0.17.0",
-    "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#v1.4.0",
+    "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#ott-provider",
     "pre-push": "^0.1.1",
     "sinon": "^2.0.0",
     "sinon-chai": "^2.8.0",
@@ -67,7 +67,7 @@
   "license": "AGPL-3.0",
   "peerDependencies": {
     "playkit-js": "https://github.com/kaltura/playkit-js.git#v0.17.0",
-    "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#v1.4.0"
+    "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#ott-provider"
   },
   "repository": {
     "type": "git",
