--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 dist: trusty
 language: node_js
 node_js:
-  - "node"
+  - 'node'
 
 addons:
   chrome: stable
@@ -14,9 +14,9 @@ cache:
     - node_modules
 
 before_install:
- - export DISPLAY=:99.0
- - sh -e /etc/init.d/xvfb start
- - chmod +x ./scripts/travis.sh
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - chmod +x ./scripts/travis.sh
 
 script: ./scripts/travis.sh
 
@@ -30,7 +30,7 @@ jobs:
   include:
     # https://docs.travis-ci.com/user/build-stages/deploy-github-releases/
     - stage: Release
-      name: "Releasing a new version"
+      name: 'Releasing a new version'
       if: tag IS present
       env: TRAVIS_MODE=release
       deploy:
@@ -67,13 +67,13 @@ jobs:
     # Required tests
     - stage: Tests
       if: (branch = master) OR (tag IS present) OR (type = pull_request)
-      name: "Running lint"
-      env:   TRAVIS_MODE=lint
+      name: 'Running lint'
+      env: TRAVIS_MODE=lint
     - stage: Tests
       if: (branch = master) OR (tag IS present) OR (type = pull_request)
-      name: "Running Flow type check"
-      env:   TRAVIS_MODE=flow
+      name: 'Running Flow type check'
+      env: TRAVIS_MODE=flow
     - stage: Tests
       if: (branch = master) OR (tag IS present) OR (type = pull_request)
-      name: "Running unit tests"
-      env:   TRAVIS_MODE=unitTests
+      name: 'Running unit tests'
+      env: TRAVIS_MODE=unitTests
