--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "@playkit-js/playkit-js": "0.62.0",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
@@ -51,6 +52,7 @@
     "flow-bin": "latest",
     "husky": "^0.14.3",
     "istanbul": "^0.4.5",
+    "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#FEC-10057",
     "karma": "^1.5.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -66,7 +68,6 @@
     "lint-staged": "^7.2.0",
     "mocha": "^3.2.0",
     "mocha-cli": "^1.0.1",
-    "playkit-js": "https://github.com/kaltura/playkit-js.git#v0.29.0",
     "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#v2.5.0",
     "prettier": "^1.13.7",
     "sinon": "^2.0.0",
@@ -77,7 +78,8 @@
     "webpack-dev-server": "latest"
   },
   "peerDependencies": {
-    "playkit-js": "https://github.com/kaltura/playkit-js.git#v0.29.0",
+    "@playkit-js/playkit-js": "0.62.0",
+    "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#FEC-10057",
     "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#v2.5.0"
   },
   "keywords": [
