--- a/package.json
+++ b/package.json
@@ -2,19 +2,39 @@
   "name": "@playkit-js/playkit-js-kanalytics",
   "version": "0.10.1",
   "description": "",
+  "keywords": [
+    "kaltura",
+    "analytics",
+    "QOE",
+    "QOS",
+    "player",
+    "playkit-js",
+    "playkit-js-kanalytics",
+    "html5 player"
+  ],
+  "homepage": "https://github.com/kaltura/playkit-js-kanalytics#readme",
+  "bugs": {
+    "url": "https://github.com/kaltura/playkit-js-kanalytics/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kaltura/playkit-js-kanalytics.git"
+  },
+  "license": "AGPL-3.0",
   "main": "dist/playkit-kanalytics.js",
   "scripts": {
-    "clean": "rm -rf ./dist",
     "prebuild": "npm run clean",
-    "build": "NODE_ENV=production webpack",
-    "dev": "webpack-dev-server",
-    "watch": "webpack --progress --colors --watch",
-    "test": "NODE_ENV=test karma start --color",
-    "release": "standard-version",
-    "pushTaggedRelease": "git push --follow-tags --no-verify origin master",
+    "build": "webpack --mode production",
+    "clean": "rm -rf ./dist",
+    "dev": "webpack-dev-server --mode development",
     "eslint": "eslint . --color",
     "flow": "flow check",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "prettier:fix": "prettier --write .",
+    "pushTaggedRelease": "git push --follow-tags --no-verify origin master",
+    "release": "standard-version",
+    "test": "NODE_ENV=test karma start --color --mode development",
+    "watch": "webpack --progress --colors --watch --mode development"
   },
   "lint-staged": {
     "*.{js,jsx}": [
@@ -26,79 +46,66 @@
       "git add"
     ]
   },
-  "publishConfig": {
-    "access": "public"
-  },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.7",
-    "babel-plugin-istanbul": "^4.0.0",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.23.0",
-    "chai": "^3.5.0",
-    "cross-env": "^3.1.4",
-    "eslint": "^3.10.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-flowtype": "^2.30.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-mocha-no-only": "^0.0.5",
-    "eslint-plugin-prettier": "^2.6.2",
-    "flow-bin": "latest",
-    "husky": "^0.14.3",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-classes": "^7.10.4",
+    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
+    "@babel/plugin-transform-property-mutators": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-flow": "^7.10.4",
+    "@babel/register": "^7.10.5",
+    "@playkit-js/playkit-js": "0.62.1-canary.724715e",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-istanbul": "^6.0.0",
+    "chai": "^4.2.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-mocha-no-only": "^1.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "flow-bin": "^0.129.0",
+    "husky": "^4.2.5",
     "istanbul": "^0.4.5",
-    "karma": "^1.5.0",
+    "karma": "^5.1.0",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage": "^1.1.1",
-    "karma-firefox-launcher": "^1.0.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage": "^2.0.2",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-ie-launcher": "^1.0.0",
-    "karma-mocha": "^1.3.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-safari-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.2",
-    "lint-staged": "^7.2.0",
-    "mocha": "^3.2.0",
+    "karma-webpack": "^4.0.2",
+    "lint-staged": "^10.2.11",
+    "mocha": "^8.0.1",
     "mocha-cli": "^1.0.1",
-    "playkit-js": "https://github.com/kaltura/playkit-js.git#v0.29.0",
-    "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#v2.5.0",
-    "prettier": "^1.13.7",
-    "sinon": "^2.0.0",
-    "sinon-chai": "^2.8.0",
-    "standard-version": "^4.0.0",
-    "uglifyjs-webpack-plugin": "^0.4.3",
-    "webpack": "latest",
-    "webpack-dev-server": "latest"
+    "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#update-dist",
+    "prettier": "^2.0.5",
+    "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
+    "standard-version": "^8.0.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "peerDependencies": {
-    "playkit-js": "https://github.com/kaltura/playkit-js.git#v0.29.0",
-    "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#v2.5.0"
+    "@playkit-js/playkit-js": "0.62.1-canary.724715e",
+    "playkit-js-providers": "https://github.com/kaltura/playkit-js-providers.git#update-dist"
   },
-  "keywords": [
-    "kaltura",
-    "analytics",
-    "QOE",
-    "QOS",
-    "player",
-    "playkit-js",
-    "playkit-js-kanalytics",
-    "html5 player"
-  ],
-  "license": "AGPL-3.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kaltura/playkit-js-kanalytics.git"
+  "publishConfig": {
+    "access": "public"
   },
-  "bugs": {
-    "url": "https://github.com/kaltura/playkit-js-kanalytics/issues"
-  },
-  "homepage": "https://github.com/kaltura/playkit-js-kanalytics#readme",
   "kcc": {
     "name": "playkit-kanalytics"
   }
