--- a/.flowconfig
+++ b/.flowconfig
@@ -4,4 +4,5 @@
 [libs]
 node_modules/@playkit-js/playkit-js/flow-typed/
 node_modules/playkit-js-providers/flow-typed/
+node_modules/kaltura-player-js/flow-typed/
 [options]
